logs/django-themagicapi.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/corsheaders'...
Listing './lib/python3.5/site-packages/django_cors_middleware-1.3.1.egg-info'...
Listing './lib/python3.5/site-packages/django_themagicapi-1.0.34.egg-info'...
Listing './lib/python3.5/site-packages/django_tokenapi-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/custom_test.py'...
***   File "./lib/python3.5/site-packages/tests/custom_test.py", line 10
    print "Todos los salarios con su usuarios"
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/datos_test.py'...
***   File "./lib/python3.5/site-packages/tests/datos_test.py", line 63
    print Puesto.serialize(puesto1.getAll())
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/themagicapi'...
Listing './lib/python3.5/site-packages/themagicapi/controller'...
Listing './lib/python3.5/site-packages/themagicapi/migrations'...
Listing './lib/python3.5/site-packages/tokenapi'...
Listing './lib/python3.5/site-packages/valleorm'...
Listing './lib/python3.5/site-packages/valleorm-1.0.0.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
